Fixed bug where the title covered up things below it in the main text area

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -36,7 +36,6 @@
   overflow: hidden;
   filter: glow(color=black,strength=5);
   z-index: 5;
-  width: 100%;
   display: block;
   position: fixed;
   top: 10px;
@@ -46,7 +45,7 @@
   font-weight: 800;
   text-shadow: 5px 5px #000, 4px 4px #000, 3px 3px #000, 2px 2px #000, 1px 1px #000, -1px -1px 0 #000, -2px -2px 0 #000,  1px -1px 0 #000;
   text-align: left;
-  padding: 20px 0 20px 10px;
+  padding: 20px 5px 20px 10px;
 }
 #subhead {
   position: fixed;
